--- a/config/multi-frontend.yml
+++ b/config/multi-frontend.yml
@@ -4,10 +4,9 @@ root: ~/datenshi/multi/vinse
 
 windows:
   - name: multi-frontend
-    layout: main-horizontal
+    layout: tiled
     commands:
       - npm run dev
     panes:
       - type: horizontal
-        commands:
-          - clear
+        commands: []
