--- a/config/yohane-irc.yml
+++ b/config/yohane-irc.yml
@@ -2,12 +2,14 @@ session: yohane-irc
 
 root: ~/datenshi/yohane-irc
 
+stop:
+  - tmux send-keys -t yohane-irc.0 "C-c" ENTER
+
 windows:
   - name: yohane-irc
-    layout: main-horizontal
+    layout: tiled
     commands:
       - ./matterbridge
     panes:
       - type: horizontal
-        commands:
-          - clear
+        commands: []
