--- a/config/beatmap-server.yml
+++ b/config/beatmap-server.yml
@@ -4,10 +4,9 @@ root: ~/datenshi/proxybm
 
 windows:
   - name: beatmap-server
-    layout: main-horizontal
+    layout: tiled
     commands:
       - python3.6 aoba-proxy.py
     panes:
       - type: horizontal
-        commands:
-          - clear
+        commands: []
