--- a/config/global.config.example
+++ b/config/global.config.example
@@ -2,4 +2,4 @@ $mcpanel="https://panel.pterodactyl.io"
 $mcpaneltoken="API client"
 $mcpanelcookies="Cookies Client"
 $mcserverid="Server ID"
-
+$webhookDC=""
