fix startup minecraft

--- a/config/yohane-irc.yml
+++ b/config/yohane-irc.yml
@@ -9,6 +9,7 @@ windows:
   - name: yohane-irc
     layout: tiled
     commands:
+      - sleep 10
       - ./matterbridge
     panes:
       - type: horizontal
