--- a/config/global.config.example
+++ b/config/global.config.example
@@ -1,5 +1,4 @@
-$mcpanel="https://panel.pterodactyl.io"
-$mcpaneltoken="API client"
-$mcpanelcookies="Cookies Client"
-$mcserverid="Server ID"
-$webhookDC=""
+mcpaneltoken="API client"
+mcpanelcookies="Cookies Client"
+mcpanelserverid="Server ID"
+webhookDC=""
